<resources>
    <string name="app_name">Framework4</string>
    <string name="choose_an_option">Choose an Option</string>
    <string name="top_level_menu">Menu</string>
    <string name="top_level_button1">Button 1</string>
    <string name="top_level_button2">Button 2</string>
    <string name="top_level_button3">Button 3</string>
    <string name="top_level_button4">Button 4</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Needle Guide Assistant</string>
    <string name="toppage_calculator_button_text">Calculator</string>
    <string name="toppage_calculator_text">Calculator directly determines the correct parameters. For users familiar with the needle guide system.</string>
    <string name="toppage_sbs_text">The step by step guide gives the user additional guidance in using the needle guides.</string>
    <string name="select_needle_guide">Select Needle Guide Type:</string>
    <string name="needle_length_cm">Needle Length (cm):</string>
</resources>
